--- a/styles.css
+++ b/styles.css
@@ -186,3 +186,40 @@ body {
     border-radius: 50%;
     object-fit: cover;
 }
+
+/* SERVICES SECTION */
+
+.services-section {
+    background-color: rgb(22, 22, 22);
+    padding: 6rem 0;
+}
+
+.services-section .services-container {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-top: 3rem;
+}
+
+.services-container .service-item {
+    flex-basis: 31.5%;
+    padding: 3rem 1.5rem;
+    background-color: rgb(42, 42, 46);
+    border-radius: 3px;
+    margin: 1rem 0;
+    text-align: center;
+}
+
+.service-item i {
+    font-size: 3rem;
+}
+
+.service-item h6 {
+    font-size: 1rem;
+    margin-top: 1rem;
+}
+
+.service-item p {
+    font-size: 0.9rem;
+    margin-top: 1rem;
+}
