--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Teko:wght@300&display=swap");
 
 /* Defaults */
 
@@ -22,7 +23,7 @@ a {
 /* VARIABLES */
 
 :root {
-    --orange: rgb(252, 99, 11);
+    --secondary-color: #20498a;
 }
 
 /* BASIC STYLES */
@@ -123,20 +124,43 @@ header {
 
 .main-intro {
     margin: auto;
-    padding-top: 10rem;
-    padding-bottom: 3rem;
-    text-align: center;
+    padding-top: 8rem;
+    padding-bottom: 4rem;
 }
 
-.main-intro h5 {
-    font-size: 1.2rem;
-    text-transform: uppercase;
-    font-weight: normal;
+.main-intro .intro-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 4rem;
 }
 
-.main-intro h1 {
-    font-size: 3.2rem;
-    margin-top: 2rem;
+.main-intro img {
+    width: 13rem;
+    height: 13rem;
+    border-radius: 50%;
+    object-fit: cover;
+    box-shadow: 0px 0px 5px 1px rgba(255, 255, 255, 0.75);
+    -webkit-box-shadow: 0px 0px 5px 1px rgba(255, 255, 255, 0.75);
+    -moz-box-shadow: 0px 0px 5px 1px rgba(255, 255, 255, 0.75);
+}
+
+.main-intro .intro-text {
+    max-width: 25rem;
+}
+
+.main-intro h2 {
+    font-size: 1.7rem;
+    font-weight: bold;
+}
+
+.main-intro h2 span {
+    font-weight: lighter;
+}
+
+.main-intro p {
+    margin-top: 0.4rem;
+    font-size: 0.9rem;
 }
 
 .main-intro .buttons {
@@ -144,31 +168,50 @@ header {
 }
 
 .main-intro .buttons a {
-    background-color: var(--orange);
+    background-color: var(--secondary-color);
     padding: 0.8rem 1.8rem;
-    border-radius: 30px;
+    border-radius: 0 5px 5px 0;
+    font-size: 0.8rem;
+    font-weight: bold;
     margin: 0.3rem;
+}
+
+.main-intro .scroll-button-container {
+    display: block;
+    margin-top: 7rem;
+    text-align: center;
 }
 
 .main-intro .scroll-down-button {
     display: inline-block;
-    margin-top: 7rem;
+    height: 30px;
+    width: 30px;
+    line-height: 30px;
+    border-radius: 50%;
+    background: rgb(53, 53, 53);
+}
+
+.main-intro .scroll-down-button:hover {
+    cursor: pointer;
+    background: transparent;
 }
 
 .main-intro .links ul {
-    width: fit-content;
-    margin: auto;
+    position: absolute;
     display: flex;
-    gap: 2rem;
-    margin-top: 1.5rem;
+    flex-direction: column;
+    right: 4rem;
+    top: 12rem;
+    gap: 4rem;
 }
 
 .main-intro .links i {
-    transition: opacity 0.3s ease-in-out;
+    transition: opacity 0.2s ease-in-out;
+    font-size: 1.1rem;
 }
 
 .main-intro .links i:hover {
-    opacity: 0.5;
+    opacity: 0.3;
 }
 
 /* ABOUT SECTION */
@@ -184,27 +227,31 @@ header {
 
 .about-section .section-content {
     display: flex;
-    align-items: center;
+    justify-content: space-between;
     margin-top: 4.5rem;
 }
 
 .section-content > .image-container {
-    width: 30%;
-    text-align: center;
+    width: 35%;
+    order: 2;
 }
 
 .section-content .text-container {
-    width: 70%;
+    width: 60%;
+    order: 1;
 }
 
 .text-container h3 {
+    display: inline-block;
     font-size: 1.5rem;
+    border-bottom: 2px solid var(--secondary-color);
 }
 
 .text-container .profession {
     text-transform: uppercase;
-    font-size: 0.9rem;
-    margin-top: 0.7rem;
+    font-size: 0.85rem;
+    margin-top: 0.3rem;
+    font-weight: 500;
 }
 
 .text-container p {
@@ -219,12 +266,15 @@ header {
     background-color: rgb(44, 44, 44);
     padding: 1rem;
     margin-top: 2rem;
+    font-family: "Teko", sans-serif;
+    font-size: 1.2rem;
+    letter-spacing: 0.1rem;
 }
 
 .about-section img {
-    width: 13rem;
-    height: 13rem;
-    border-radius: 50%;
+    width: 100%;
+    height: 100%;
+    border-radius: 3px;
     object-fit: cover;
 }
 
@@ -244,25 +294,41 @@ header {
 
 .services-container .service-item {
     flex-basis: 31.5%;
-    padding: 3rem 1.5rem;
+    padding: 4rem 1.5rem;
     background-color: rgb(42, 42, 46);
     border-radius: 3px;
     margin: 1rem 0;
     text-align: center;
+    transition: 0.3s ease-in-out;
+}
+
+.services-container .service-item:hover {
+    border-bottom: 3px solid var(--secondary-color);
 }
 
 .service-item i {
-    font-size: 3rem;
+    font-size: 1.7rem;
+    height: 4rem;
+    width: 4rem;
+    line-height: 4rem;
+    text-align: center;
+    background: gray;
+    border-radius: 50%;
+    transition: 0.3s ease-in-out;
+}
+
+.service-item:hover i {
+    background-color: var(--secondary-color);
 }
 
 .service-item h6 {
     font-size: 1rem;
-    margin-top: 1rem;
+    margin-top: 1.7rem;
 }
 
 .service-item p {
-    font-size: 0.9rem;
-    margin-top: 1rem;
+    font-size: 0.85rem;
+    margin-top: 0.9rem;
 }
 
 /* WORK AND EDUCATION SECTION */
@@ -298,7 +364,7 @@ header {
     display: inline-block;
     font-size: 0.7rem;
     padding: 0.3rem 0.8rem;
-    background-color: var(--orange);
+    background-color: var(--secondary-color);
     font-weight: bold;
     margin-top: 0.9rem;
 }
